# PicoTop

./: CMakeLists.txt  README.md
HARDWARE/3D Printed Case/: Top_Rev5.stl
HARDWARE/PicoTop Board Rev2/: PicoTop Board Rev2.csv  PicoTop Board Rev2.kicad_pcb  PicoTop Board Rev2.kicad_prl  PicoTop Board Rev2.kicad_pro  PicoTop Board Rev2.kicad_sch  PicoTop Board-top-pos.csv  fp-info-cache
HARDWARE/PicoTop Board Rev2/Gerbers/: PicoTop Board Rev2-B_Cu.gbl  PicoTop Board Rev2-B_Mask.gbs  PicoTop Board Rev2-B_Paste.gbp  PicoTop Board Rev2-B_Silkscreen.gbo  PicoTop Board Rev2-Edge_Cuts.gm1  PicoTop Board Rev2-F_Cu.gtl  PicoTop Board Rev2-F_Mask.gts  PicoTop Board Rev2-F_Paste.gtp  PicoTop Board Rev2-F_Silkscreen.gto  PicoTop Board Rev2-job.gbrjob  PicoTop Board Rev2.drl
HARDWARE/PicoTop Board Rev2/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
SOFTWARE/boards/: picotop.h
SOFTWARE/lib/programs/shell/: CMakeLists.txt  cmd_common.c  commands.h
SOFTWARE/lib/programs/shell/commands/: battv.c  calc_cmd.c  dir_cmds.c  hangman_cmd.c  sd_cmds.c  test.c  uedit_cmd.c
SOFTWARE/src/boardtest/: main.c
SOFTWARE/src/filesystem/: main.c
SOFTWARE/src/shellwork/: main-fns.c  main.c
lib/core/crypto/: crypto.c  crypto.h  mbedtls_config.h
lib/core/prog/: CMakeLists.txt
lib/filesystem/: fs_types.h
lib/programs/calc/: CMakeLists.txt  calc.h  calc_defs.h  calc_types.h
lib/programs/calc/bg/: calc_edit.h  calc_file.c  calc_help.h  calc_ui.c
lib/programs/calc/math/: ast.h  eval.h  vars.c  vars.h
src/playground/: main.c
src/shellwork/: includes.h
(+75 files in other folders)
